--- a/index.ipynb
+++ b/index.ipynb
@@ -1242,12 +1242,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "def marginal_return_on_budget(first_show, second_show):\n",
-    "    return (second_show[1]-first_show[1])/"
+    "    return (second_show[1]-first_show[1])/(second_show[0]-first_show[0])"
    ]
   },
   {
