Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1247,7 +1247,7 @@
    "outputs": [],
    "source": [
     "def marginal_return_on_budget(first_show, second_show):\n",
-    "    return (second_show['a']-first_show[1])/(second_show[0]-first_show[0])"
+    "    return (second_show['attendance']-first_show[1])/(second_show[0]-first_show[0])"
    ]
   },
   {
