--- a/index.ipynb
+++ b/index.ipynb
@@ -1415,7 +1415,8 @@
     "def slope(x_values, y_values):\n",
     "    sorted_values = sorted_points(x_values, y_values)\n",
     "    x1 = sorted_values[0][0]\n",
-    "    y1 = "
+    "    y1 = sorted_values[0][-1]\n",
+    "    x2"
    ]
   },
   {
