Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1408,7 +1408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1417,12 +1417,12 @@
     "    x1 = sorted_values[0][0]\n",
     "    y1 = sorted_values[0][-1]\n",
     "    x2 = sorted_values[1][0]\n",
-    "    y2 = sorted_values[-][-1]"
+    "    y2 = sorted_values[-1][-1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
