--- a/index.ipynb
+++ b/index.ipynb
@@ -1408,7 +1408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1418,14 +1418,25 @@
     "    y1 = sorted_values[0][-1]\n",
     "    x2 = sorted_values[1][0]\n",
     "    y2 = sorted_values[-1][-1]\n",
-    "    return (y2-y1)/"
+    "    return (y2-y1)/(x2-x1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.5"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "slope([200, 400], [400, 700]) # 1.5"
    ]
