--- a/index.ipynb
+++ b/index.ipynb
@@ -1455,6 +1455,7 @@
    "outputs": [],
    "source": [
     "def y_intercept(x_values, y_values, m = None):\n",
+    "    sorted_values = \n",
     "    m = slope(x_values, y_values)\n",
     "   "
    ]
