--- a/index.ipynb
+++ b/index.ipynb
@@ -1459,7 +1459,7 @@
     "    highest = sorted_values[-1]\n",
     "    if m == None:\n",
     "    m = slope(x_values, y_values)\n",
-    "    b = highest[-1]\n",
+    "    b = highest[-1]-\n",
     "   "
    ]
   },
