--- a/index.ipynb
+++ b/index.ipynb
@@ -1459,7 +1459,8 @@
     "    highest = sorted_values[-1]\n",
     "    if m == None:\n",
     "    m = slope(x_values, y_values)\n",
-    "    b = highest[-1]-m*highest[]\n",
+    "    b = highest[-1]-m*highest[0]\n",
+    "    \n",
     "   "
    ]
   },
