Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1450,9 +1450,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (<ipython-input-42-ac535af58216>, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-42-ac535af58216>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    m = slope(x_values, y_values)\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+     ]
+    }
+   ],
    "source": [
     "def y_intercept(x_values, y_values, m = None):\n",
     "    sorted_values = sorted_points(x_values, y_values)\n",
@@ -1460,7 +1469,7 @@
     "    if m == None:\n",
     "    m = slope(x_values, y_values)\n",
     "    b = highest[-1]-m*highest[0]\n",
-    "    \n",
+    "    return b\n",
     "   "
    ]
   },
