--- a/index.ipynb
+++ b/index.ipynb
@@ -1450,7 +1450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1459,14 +1459,14 @@
     "    highest = sorted_values[-1]\n",
     "    if m == None:\n",
     "        m = slope(x_values, y_values)\n",
-    "        b = highest[1]- m*highest[0]\n",
-    "    return b\n",
+    "    offset = highest[1] - m*highest[0]\n",
+    "    return offset\n",
     "   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1475,7 +1475,7 @@
        "100.0"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1486,7 +1486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 57,
    "metadata": {
     "scrolled": true
    },
@@ -1497,7 +1497,7 @@
        "-680.0"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
