--- a/index.ipynb
+++ b/index.ipynb
@@ -1416,9 +1416,10 @@
     "    sorted_values = sorted_points(x_values, y_values)\n",
     "    x1 = sorted_values[0][0]\n",
     "    y1 = sorted_values[0][1]\n",
-    "    x2 = sorted_values[1][0]\n",
+    "    x2 = sorted_values[-1][0]\n",
     "    y2 = sorted_values[-1][1]\n",
-    "    return (y2-y1)/(x2-x1)"
+    "    m = (y2 - y1)/(x2 - x1)\n",
+    "    return m"
    ]
   },
   {
