--- a/index.ipynb
+++ b/index.ipynb
@@ -1521,7 +1521,7 @@
    "outputs": [],
    "source": [
     "def build_starting_line(x_values, y_values):\n",
-    "    b = y_intercept()"
+    "    b = y_intercept((x_values, y_values)"
    ]
   },
   {
