Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1546,7 +1546,9 @@
     }
    ],
    "source": [
-    "build_starting_line([0, 200, 400], [10, 400, 700]) # {'b': 10.0, 'm': 1.725}"
+    "build_starting_line([0, 200, 400], [10, 400, 700]) # {'b': 10.0, 'm': 1.725}\n",
+    "sorted_values = sorted_points(x_values, y_values)\n",
+    "    highest = sorted_values[-1]"
    ]
   },
   {
