Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1531,23 +1531,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'m': 1.725, 'b': 10.0}"
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (<ipython-input-67-d2a254a8b7a3>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-67-d2a254a8b7a3>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    highest = sorted_values[-1]\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+     ]
     }
    ],
    "source": [
     "build_starting_line([0, 200, 400], [10, 400, 700]) # {'b': 10.0, 'm': 1.725}\n",
-    "sorted_values = sorted_points(x_values, y_values)\n",
+    "sorted_values = sorted_points([0, 200, 400], [10, 400, 700])\n",
     "    highest = sorted_values[-1]"
    ]
   },
