--- a/index.ipynb
+++ b/index.ipynb
@@ -1531,22 +1531,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "unexpected indent (<ipython-input-67-d2a254a8b7a3>, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-67-d2a254a8b7a3>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    highest = sorted_values[-1]\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "build_starting_line([0, 200, 400], [10, 400, 700]) # {'b': 10.0, 'm': 1.725}\n",
     "sorted_values = sorted_points([0, 200, 400], [10, 400, 700])\n",
-    "    highest = sorted_values[-1]"
+    "highest = sorted_values[-1]\n",
+    "hi"
    ]
   },
   {
