--- a/index.ipynb
+++ b/index.ipynb
@@ -1531,24 +1531,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(0, 10), (200, 400), (400, 700)]"
+       "{'m': 1.725, 'b': 10.0}"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "build_starting_line([0, 200, 400], [10, 400, 700]) # {'b': 10.0, 'm': 1.725}\n",
-    "sorted_values = sorted_points([0, 200, 400], [10, 400, 700])\n",
-    "sorted_values"
+    "build_starting_line([0, 200, 400], [10, 400, 700]) # {'b': 10.0, 'm': 1.725}"
    ]
   },
   {
